[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "chain-polkadot-api-spec"
version = "0.1.0"
edition = { workspace = true }
description = "interface for interacting with chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.29", features = ["executor"] }
log = { workspace = true }
subxt = { version = "0.35" }
subxt-signer = { version = "0.35", features = ["subxt", "sr25519", "std"] }
parity-scale-codec = "3.6.5"

chain-types = { workspace = true }
anyhow.workspace = true
chain-api-spec = { version = "0.1.0", path = "../api-spec" }
tokio = "1.38.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
codec.workspace = true

[lints]
workspace = true
